- File->Open R Script File now allows to specify the character encoding to use
- Fixed: No entries were added the recent script/workspaces actions after "save as"
- Initialize the output file with an appropriate encoding specification
- Add SVG support to export (graphics) plugin
- Add basic settings format settings for graphics output		TODO: somehow, SVG does not work correctly in khtmlpart/KDE 4.3, thus not the default for now. Can we do anything about this?
- Convert all plugins to use ECMAscript instead of PHP; RKWard no longer depends on PHP
- Fixed: Frequent crashes while running automated plugintests
- Fixed: Filenames without extension would not be shown in file dialogs
- Fixed: Calling "fix(my.fun)" would remove comments
- Fixed: Removing "@CRAN@" from the repositories would break package installation

--- Version 0.5.2 - Oct-26-2009
- Add Stata data file import plugin (by Michael Ash)
- All directly accessible plugins now have at least one automated test
- Add support for the dynamic help server introduced in R 2.10.0
- Assorted minor fixes and improvements to several plugins
- Fix deadlock while handling some Tcl events
- Plugin dialogs close automatically after submitting (by default)
- Fetching object structure is much faster for very large data.frames
- Fix crash when loading certain packages on Windows
- Fix some potential path issues on Windows
- "Analysis" menu was restructured, slightly
- Debug output (previously sent to stderr) is now written to a temporary file
- On plugin help pages, display a link to invoke the plugin
- Tolerate missing libraries in testing framework
- Double-clicking an item in the workspace browser now opens an object viewer, or (if possible) editor
- Safeguard against removal of essential packages via the GUI
- Add context menu action to unload packages in the workspace browser window
- Add shortcut to the load / unload packages dialog also in the workspace menu and the workspace browser context menu